feat: Implement Script Engine and Behavior for JavaScript Integration
- Added ScriptEngine to wrap GraalJS for executing JavaScript code.
- Introduced ScriptBehavior to control JavaScript generator functions for mascot actions.
- Created ScriptEngineManager as a singleton to manage GraalJS Engine instances.
- Developed unit tests for ScriptEngine and ScriptBehavior to ensure functionality.
- Added YAML support for configuration loading alongside existing XML support.
- Refactored ConfigurationLoader to handle both YAML and XML formats.
- Implemented tests for configuration loading from YAML and XML files.
- Enhanced error handling and security measures against XML external entity attacks.